fix header line heights and alignwide

--- a/src/scss/shared/_basics.scss
+++ b/src/scss/shared/_basics.scss
@@ -33,11 +33,11 @@ h1, h2, h3, h4, h5, h6 {
 	display: block;
 	font-size: 1em;
 	font-weight: bold;
-	line-height: 1.2;
+	line-height: 1.1;
 	margin: 0 0 .5em;
 	padding: 0;
 }
-	h1 { font-size: 3em; }
+	h1 { font-size: 2.75em; }
 	h2 { font-size: 2.25em; }
 	h3 { font-size: 1.75em; }
 	h4 { font-size: 1.5em; }
