--- a/src/scss/shared/_wpcore.scss
+++ b/src/scss/shared/_wpcore.scss
@@ -111,8 +111,8 @@ a img.aligncenter {
 	width: 100vw;
 }
 .alignwide {
-	margin-left: calc(25% - 25vw);
-	margin-right: calc(25% - 25vw);
-	width: 75vw;
-	min-width: 100%;
+	margin-left: -1em;
+	margin-right: -1em;
+	max-width: 100vw;
+	width: calc(100% + 2em);
 }
